--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
     <footer>
         <div class="contact-info">
-            <span>INQUIRIES: ROARINGKILLINLION@GMAIL.COM</span>
+            <span>INQUIRIES: limecoats@gmail.com</span>
             <span>CONNECT: +91 84335 52656</span>
         </div>
         <div class="trademark">
